Final clean up